fixed elemens x-overflow and increased modal font-size

--- a/styles/product.scss
+++ b/styles/product.scss
@@ -1,4 +1,5 @@
 .product {
+  font-size: 1.15rem;
   position: fixed;
   top: 90%;
   width: 0;
